@@ -1,3 +1,8 @@
+2005-03-14  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* gnome-settings-accessibility-keyboard.c: (set_server_from_gconf),
+	(set_gconf_from_server): Plug a couple of leaks.
+
 2005-02-17  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* gnome-settings-multimedia-keys.c: (do_www_action):
